# rmm

./: .pre-commit-config.yaml  README.md  dependencies.yaml
.devcontainer/cuda12.9-conda/: devcontainer.json
.devcontainer/cuda12.9-pip/: devcontainer.json
.devcontainer/cuda13.3-conda/: devcontainer.json
.devcontainer/cuda13.3-pip/: devcontainer.json
.github/workflows/: build.yaml  labeler.yml  new-issues-to-triage-projects.yml  pr.yaml  test.yaml
ci/: build_wheel.sh  test_cmake.sh
conda/environments/: all_cuda-118_arch-x86_64.yaml  all_cuda-120_arch-x86_64.yaml  all_cuda-129_arch-aarch64.yaml  all_cuda-129_arch-x86_64.yaml  all_cuda-133_arch-aarch64.yaml  all_cuda-133_arch-x86_64.yaml
conda/recipes/rmm/: meta.yaml
cpp/benchmarks/cuda_stream_pool/: cuda_stream_pool_bench.cpp
cpp/cmake/tests/: CMakeLists.txt
cpp/cmake/tests/rmm_abi_namespace/: CMakeLists.txt  verify_symbol_versions.cmake
cpp/cmake/tests/rmm_abi_namespace/consumer/: CMakeLists.txt  current.cpp  current_state_a.cpp  current_state_b.cpp  previous.cpp  previous_state.cpp  state_test.cpp
cpp/doxygen/: Doxyfile
cpp/include/rmm/: aligned.hpp  cuda_device.hpp  cuda_stream.hpp  cuda_stream_pool.hpp  cuda_stream_view.hpp  device_buffer.hpp  device_scalar.hpp  device_uvector.hpp  device_vector.hpp  error.hpp  exec_policy.hpp  logger.hpp  prefetch.hpp  process_is_exiting.hpp  resource_ref.hpp
cpp/include/rmm/detail/: aligned.hpp  export.hpp  format.hpp  runtime_capabilities.hpp  runtime_shutdown.hpp  stack_trace.hpp  thrust_namespace.h
cpp/include/rmm/mr/: aligned_resource_adaptor.hpp  arena_memory_resource.hpp  binning_memory_resource.hpp  callback_memory_resource.hpp  cuda_async_managed_memory_resource.hpp  cuda_async_memory_resource.hpp  cuda_async_view_memory_resource.hpp  cuda_memory_resource.hpp  failure_callback_resource_adaptor.hpp  failure_callback_t.hpp  fixed_size_memory_resource.hpp  limiting_resource_adaptor.hpp  logging_resource_adaptor.hpp  managed_memory_resource.hpp  per_device_resource.hpp  pinned_host_memory_resource.hpp  polymorphic_allocator.hpp  pool_memory_resource.hpp  prefetch_resource_adaptor.hpp  sam_headroom_memory_resource.hpp  statistics_resource_adaptor.hpp  (+4 more)
cpp/src/: aligned.cpp  cuda_device.cpp  cuda_stream.cpp  cuda_stream_pool.cpp  cuda_stream_view.cpp  device_buffer.cpp  error.cpp  exec_policy.cpp  logger.cpp  prefetch.cpp  runtime_shutdown.cpp
cpp/src/mr/: aligned_resource_adaptor.cpp  arena_memory_resource.cpp  binning_memory_resource.cpp  callback_memory_resource.cpp  cuda_async_managed_memory_resource.cpp  cuda_async_memory_resource.cpp  cuda_async_view_memory_resource.cpp  cuda_memory_resource.cpp  fixed_size_memory_resource.cpp  limiting_resource_adaptor.cpp  logging_resource_adaptor.cpp  managed_memory_resource.cpp  pinned_host_memory_resource.cpp  pool_memory_resource.cpp  prefetch_resource_adaptor.cpp  sam_headroom_memory_resource.cpp  statistics_resource_adaptor.cpp  system_memory_resource.cpp  thread_safe_resource_adaptor.cpp  tracking_resource_adaptor.cpp
cpp/tests/mr/: arena_mr_tests.cpp
docs/: conf.py  index.md
python/: CMakeLists.txt  pyproject.toml
python/rmm/: pyproject.toml
(+40 files in other folders)
